--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -18,7 +18,7 @@
                                     Allowed octaves
                                 </label>
                             </div>
-                            <div class='col-8'>
+                            <div class='col-8 text-right'>
                                 <select name="key" style="text-align-last:center;width:70px;display:inline-block"  class='form-control' [ngModel]="configDataService.key" >
                                     <option *ngFor="let key of configDataService.keys" [ngValue]="key">
                                         {{ key }}
@@ -29,7 +29,7 @@
                                         {{ scale.name }}
                                     </option>
                                 </select>
-                                <label class='form-label' style='display:inline-block;margin-right:15px;'>
+                                <label class='form-label' style='display:inline-block'>
                                     <input class='form-control' style='width:70px; display:inline-block' [(ngModel)]="octaveLowerBound" type="number" name="octaveLowerBound">
                                     thru
                                     <input class='form-control' style='width:70px; display:inline-block' [(ngModel)]="octaveUpperBound" type="number" name="octaveUpperBound">
@@ -57,7 +57,7 @@
                                     </label>
                                 </div>
                                 <div class='col-6'>
-                                    <label class='form-label' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    <label class='form-label' style='display:inline-block;right:-10px;' *ngIf="generationType == 'chords'">
                                         <input class='form-control' [(ngModel)]="chordSizeLowerBound" type="number" name="chordSizeLowerBound" style='width:70px; display:inline-block' >
                                         to
                                         <input class='form-control' [(ngModel)]="chordSizeUpperBound" type="number" name="chordSizeUpperBound" style='width:70px; display:inline-block' >
