--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -183,7 +183,7 @@
 <div class='resize-container'>
     <nav class="navbar fixed-bottom navbar-light bg-light piano-roll-wrapper resize-drag">
         <div class='row' style='height:100%;'>
-            <div class="col-2 piano-roll-left-pane">
+            <div class="col-3 piano-roll-left-pane">
                 <span class='piano-roll-track-msg'>
                     Now editing <span *ngIf="trackNumber!=-1"><b>track {{ trackNumber + 1}}</b></span>
                     <span *ngIf="trackNumber==-1">N/A</span>
@@ -192,14 +192,17 @@
                 <button class="action-button" type="button" id="generate-button"
                     data-toggle="modal" [attr.data-target]="'#generationModal' + trackNumber "
                     [disabled]="trackNumber==-1">
-                    <span class='glyphicon glyphicon-fire'></span>
-                    GENERATE
+                    GENERATE <span class='glyphicon glyphicon-fire'></span>
+                </button>
+
+                <button class="action-button" type="button" id="generate-button" (click)=quickGenerate(generationForm.value)
+                    [disabled]="trackNumber==-1">
+                    QUICK GENERATE <span class='glyphicon glyphicon-flash'></span>
                 </button>
 
                 <button class="action-button" id="clear-button"
                     (click)="clearPianoRoll()" [disabled]="trackNumber==-1">
-                    <span class='glyphicon glyphicon-ban-circle'></span>
-                    CLEAR
+                    CLEAR <span class='glyphicon glyphicon-ban-circle'></span>
                 </button>
 
                 <div class='piano-roll-input-group'>
