--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -145,7 +145,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class='row'>
+                            <!-- <div class='row'>
                                 <div class='col-6'>
                                     <label class='form-label form-label-text' style='display:block;;margin-top:10px;' *ngIf="generationType == 'chords'" >
                                         Note-change voice leading constraint: the # of notes that change between chords must be between
@@ -167,7 +167,7 @@
                                         </option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                     </form>
