--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -229,6 +229,26 @@ input[type=number] {
     border-color:white;
 }
 
+
+.action-button {
+    border: solid black 1px;
+    color:white;
+    padding:5px 10px;
+    border-radius:2px;
+    font-size:12px;
+    margin:10px 10px 0 5px;
+    width:250px;
+    background:#006e82;
+    transition:color .2s, border-color .2s;
+    -webkit-transition:color .2s, border-color .2s;
+    -moz-transition:color .2s, border-color .2s;
+}
+
+.action-button:hover {
+    border-color: white;
+}
+
+
 .bottom-space {
     height:700px;
 }
@@ -250,12 +270,76 @@ input[type=number] {
     opacity: 1;
 }
 
+
+#repeat-button {
+    position:absolute;
+    right:60px;
+    top:-8px;
+}
+
+
 #logs-button {
     position:absolute;
     right:15px;
     top:-5px;
 }
 
+#repeat-button {
+    filter: brightness(0) saturate(100%) invert(99%) sepia(100%) saturate(0%) hue-rotate(123deg) brightness(108%) contrast(100%);
+    height:35px;
+    width:35px;   
+}
+
+#repeat-button.glyphicon-active {
+    /* opacity:1; */
+    filter: invert(100%) sepia(60%) saturate(5874%) hue-rotate(12deg) brightness(111%) contrast(109%);
+}
+
+
+.slidecontainer {
+    width: 100%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 23px;
+    height: 24px;
+    border: 0;
+    
+    cursor: pointer;
+}
+
+.slider::-webkit-slider-thumb::after {
+    content:"\2b";
+    font-family:"Glyphicons Halflings";
+}
+
+.slider::-moz-range-thumb {
+    width: 23px;
+    height: 24px;
+    border: 0;
+    
+    cursor: pointer;
+}
+
+  
 .logs-wrapper {
     height:600px;
     width:60%;
