--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -54,6 +54,11 @@
                         </select>
                         <span id='scale-label' class='no-select'>SCALE</span>
                     </span>
+                    <span class='divider'></span>
+                    <span class='top-bar-input-group' >
+                        <input class='top-bar-input' type='number' max='500'  style='width:50px;' formControlName="timeStateLength" value="timeStateLength"/>
+                        <span id='time-state-length-label' class='no-select'>LENGTH</span>
+                    </span>
                 </div>
             </form>
         </div>
