feat: update README

--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -46,7 +46,7 @@
                             <span class="radio"></span>
                         </label>
                         <br/>
-                        <button class="generation-modal-collapsible-btn" data-toggle="collapse" data-toggle="collapse" data-target="#chordVoicings" aria-expanded="true" aria-controls="chordVoicings" *ngIf="generationType == 'chords'">
+                        <button class="generation-modal-collapsible-btn" data-toggle="collapse" data-target="#chordVoicings" aria-expanded="true" aria-controls="chordVoicings" *ngIf="generationType == 'chords'">
                             Chord voicings
                         </button>
                         <div class="generation-modal-collapsible collapse show" id="chordVoicings" *ngIf="generationType == 'chords'">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
 
-                        <button class="generation-modal-collapsible-btn" data-toggle="collapse" data-toggle="collapse" data-target="#chordProgressions" aria-expanded="true" aria-controls="chordProgressions" *ngIf="generationType == 'chords'">
+                        <button class="generation-modal-collapsible-btn" data-toggle="collapse" data-target="#chordProgressions" aria-expanded="true" aria-controls="chordProgressions" *ngIf="generationType == 'chords'">
                             Chord progressions
                         </button>
                         <div class="generation-modal-collapsible collapse show" id="chordProgressions" >
