feat: add support for eighth notes

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -56,7 +56,7 @@
                     </span>
                     <span class='divider'></span>
                     <span class='top-bar-input-group' >
-                        <input class='top-bar-input' type='number' max='500'  style='width:50px;' formControlName="timeStateLength" value="timeStateLength"/>
+                        <input class='top-bar-input' type='number' max='500'  style='width:50px;' formControlName="numBeatsInProject" value="numBeatsInProject"/>
                         <span id='time-state-length-label' class='no-select'>LENGTH</span>
                     </span>
                 </div>
