--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -149,7 +149,7 @@ span.note-label[data-note='C'] {
 }
 
 .note-rows li {
-    border-top: solid 1px #a5f2ff;
+    /* border-top: solid 1px #a5f2ff; */
     width:100%;
 }
 
@@ -174,11 +174,19 @@ span.note-label[data-note='C'] {
     top:-1px;
     position:relative;
     display:inline-block;
-    border-left: solid 1px white;
-    border-right: solid 1px white;
+    /* border-left: solid 1px white; */
+    border-right: solid 1px #ededed;
     height:100%;
     cursor:pointer;
     margin:0;
+}
+
+.grid-state-wrapper:nth-child(4n) {
+    border-right: solid 1px #d1d1d1;
+}
+
+.grid-state-wrapper:nth-child(8n) {
+    border-right: solid 1px #888 !important;
 }
 
 .grid-state-wrapper input {
