style: pianoroll color scheme

--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -249,7 +249,7 @@
                     s
                 </div>
             </div>
-            <div class='col piano-roll-col'>
+            <div class='col-9 piano-roll-col'>
                 <div class="row piano-roll">
                     <!-- <div class="col-1 piano">
                         <div class='piano-keys'>
