--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -55,7 +55,7 @@ button[disabled] {
 .piano-roll-col {
     padding:0;
     height:100%;
-    background:#eafbff;
+    background: #008fa8;
 }
 
 
@@ -65,6 +65,7 @@ button[disabled] {
     border-left:0;
     border-right:0;
     overflow-y: scroll;
+    overflow-x: hidden;
     height:100%;
 }
 
