feat: connect webaudiopianoroll to play and generate features

--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -279,8 +279,8 @@
                         </ul>
                     </div> -->
                 
-                    <webaudio-pianoroll-component></webaudio-pianoroll-component>
-                
+                    <!-- <webaudio-pianoroll-component></webaudio-pianoroll-component> -->
+                    <template #webAudioPianoRoll></template>
                 </div>
             </div>
         </div>
