feat: usability improvements and bug fixes

--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -178,7 +178,7 @@
                                 </label>
                             </div>
                         </div>
-                        <div class='row'>
+                        <div class='row' *ngIf="generationType == 'chords'">
                             <div class='col-6'>
                                 <!-- <label class='form-label form-label-text' style='display:block;;margin-top:10px;' *ngIf="generationType == 'chords'" >
                                         Note-change voice leading constraint: the # of notes that change between chords must be between
