--- a/ClientApp/src/app/track.component.html
+++ b/ClientApp/src/app/track.component.html
@@ -1,10 +1,11 @@
 <div class='track' [class.track-selected]="thisTrackIsSelected">
     <div class='row'>
-        <div class='col-1 track-controls'>
-            <span class='track-number'>{{ trackNumber + 1 }}</span>
+        <div class='col-2 track-controls'>
+            <span class='track-number'>{{ trackNumber + 1 }}.</span>
+            <span class='track-name'>{{ trackName }}</span>
         </div>
 
-        <div class="col region-preview" (click)="toggleRegionSelected()">
+        <div class="col-9 region-preview" (click)="toggleRegionSelected()">
             <div class='col note-grid'>
                 <ul class='note-rows'>
                     <li *ngFor="let note of gridState"
