--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -8,13 +8,23 @@
     </div>
     <mat-menu #filemenu="matMenu" id='file-menu' class='toolbar-menu'>
         <button mat-menu-item (click)="exportToMidi()">
-          <mat-icon>music_note</mat-icon>
+          <mat-icon>get_app</mat-icon>
           <span>Export to MIDI</span>
         </button>
         <button mat-menu-item (click)="exportToMidiWithLog()">
             <mat-icon>assignment_returned</mat-icon>
             <span>Download MIDI & last generation log</span>
-          </button>
+        </button>
+        <input #uploadedMIDIFileInput 
+            id="uploaded-midi-file" type="file"
+            accept=".mid,.midi"
+            style="visibility:hidden; position:absolute; opacity:0;"
+            (change)="importMidi($event.target.files[0], $event.target)"
+        />
+        <button mat-menu-item (click)="uploadedMIDIFileInput.click()">
+            <mat-icon>library_add</mat-icon>
+            <span>Import MIDI</span>
+        </button>
     </mat-menu>
     <header class="row primary-color">
         <div class="col-4 text-left">
@@ -99,6 +109,44 @@
     <div class='header-space'></div>
     <template #newTrack></template>
     <template #pianoRoll></template>
+
+    <button data-toggle="modal" data-target="#import-modal" id='import-midi-toggle'></button>
+    <div class="modal fade custom-modal" id='import-modal' tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Configure import</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="custom-modal-collapsible collapse show" id="import-midi-modal">
+                        <div class='row'>
+                            <div class='col-6'>
+                                <label class='form-label form-label-text' style='display:inline-block;'>
+                                    Alter project tempo to match imported file?
+                                </label>
+                            </div>
+                            <div class='col-6'>
+                                <label class='custom-checkbox' style='display:block;'>
+                                    <input class='form-control' style='width:70px; display:inline-block'
+                                    [(ngModel)]="changeTempoWithMidiImport"
+                                     type="checkbox" name="changeTempoWithMidiImport"/>
+                                    <span class="checkmark"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+                    <button type="button" (click)="renderMidi()" class="btn btn-success"
+                        data-dismiss="modal">Continue</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class='bottom-space'></div>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
