--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -110,7 +110,7 @@
     <template #newTrack></template>
     <template #pianoRoll></template>
 
-    <button data-toggle="modal" data-target="#import-modal" id='import-midi-toggle'></button>
+    <button data-toggle="modal" data-target="#import-modal" id='import-midi-toggle' style='position:absolute;opacity:0;bottom:0;right:0;'></button>
     <div class="modal fade custom-modal" id='import-modal' tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
